[package]
name = "rn2483"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
description = "Rust driver for Microchip RN2483 and RN2903 LoRaWAN modules."
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dev-dependencies]
linux-embedded-hal = { path = "../linux-embedded-hal" }
serial = "0.4"
