[package]
name = "rn2xx3"
version = "0.1.3"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/rn2xx3"
description = "Rust driver for Microchip RN2483 and RN2903 LoRaWAN modules. [WIP]"  # todo: wip
readme = "README.md"
repository = "https://github.com/dbrgn/rn2xx3-rs/"
license = "MIT OR Apache-2.0"
keywords = ["rn2483", "rn2903", "microchip", "lorawan", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

[dependencies]
base16 = { version = "0.2", features = [], default-features = false }
doc-comment = "0.3"
embedded-hal = "0.2"
log = { version = "0.4", optional = true }
nb = "0.1"
numtoa = "0.2"

[dev-dependencies]
embedded-hal-mock = "0.7"
env_logger = "0.7"
linux-embedded-hal = "0.3"
serial = "0.4"

[features]
logging = ["log"]

[[example]]
name = "join_otaa"
required-features = ["logging"]
